--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/elizabeth-nielsen-a3b843132/"
+  linkedin         : "elizabeth-nielsen-a3b843132/"
   orcid            : 
   pinterest        :
   soundcloud       :
