--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Elizabeth"
-  avatar           : "profile.png"
+  name             : "Elizabeth Nielsen"
+  avatar           : "profile.jpg"
   bio              : "PhD Student in Informatics at the University of Edinburgh"
   location         : "Edinburgh"
   employer         :
