--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Elizabeth Nielsen"
-  avatar           : "lizzie.jpg"
+  avatar           : "profile.jpg"
   bio              : "PhD Student in Informatics at the University of Edinburgh"
   location         : "Edinburgh"
   employer         :
